<resources>
    <string name="app_name">猿聘</string>
    <string name="welcome">猿聘在手，工作我有</string>
    <string name="imgContentDescription">图片</string>
    <string name="userCollTitle_Hire">收藏的职位</string>
    <string name="userCollTitle_Technology">收藏的技术</string>
    <string name="companyDescribe">公司介绍</string>
    <string name="companyHire">公司职位</string>
    <string name="userInfo">个人信息</string>
    <string name="HeadImg">头像</string>
    <string name="RealName">真实姓名</string>
    <string name="Sex">性别</string>
    <string name="Age">年龄</string>
    <string name="Education">学历</string>
    <string name="Graduate">毕业学校</string>
    <string name="Salary">期望薪资</string>
    <string name="Experience">项目经验</string>
    <string name="Superiority">我的优势</string>
    <string name="upload">上传</string>
    <string name="Photograph">拍照上传</string>
    <string name="Album">相册选择</string>
    <string name="DefaultAvatar">默认头像</string>
    <string name="Confirm">确定</string>
    <string name="Cancel">取消</string>
    <string name="man">男</string>
    <string name="weman">女</string>
    <string name="ReleaseHire">发布新的职位</string>
    <string name="PhoneNumber">注册手机号</string>
    <string name="BossInfo">公司信息</string>
    <string name="CompanyName">公司名称</string>
    <string name="Address">地址</string>
    <string name="Scale">规模</string>
    <string name="Describe">公司介绍</string>
    <string name="not_member_yet">Not a member yet?</string>
    <string name="phone">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="worker">求职者</string>
    <string name="boss">boss</string>
    <string name="certainPassword">请再次输入密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="CompanyShow">公司场景</string>
    <string name="CompanyImgs">公司图片</string>
    <string name="exit">退出</string>
    <string name="release_job">发布职位</string>
    <string name="job_name">职位名称</string>
    <string name="city">城市</string>
    <string name="jobType">职位类别</string>
    <string name="jobCharge">薪资水平</string>
    <string name="JobTechnology">技能要求</string>
    <string name="jobDetail">职位详情</string>
    <string name="push">推送</string>
    <string name="userjob">投的职位</string>
    <string name="getResume">收到的简历</string>
    <string name="chat">和他聊聊</string>
    <string name="companyMoreDescribe">公司详细介绍</string>
    <string name="HotJob">热招职位</string>
    <string name="companySurvey">公司概况</string>
    <string name="send_company_pics">发布公司图片</string>
    <string name="pics_hint_9">(友情提示:只能添加9张图片,长按图片可以删除已添加图片)</string>
    <string name="Immediate_use">立即体验</string>
    <string name="pic_edit">图片编辑</string>
    <string name="teachnology_article">技术文章</string>
    <string name="collection">收藏</string>
    <string name="Publisher">发布人</string>
    <string name="want_worker">求职者</string>
    <string name="edit">编辑</string>
    <string name="Position_applied">应聘职位</string>
    <string name="sharpening">锐化</string>
    <string name="Sketch">素描</string>
    <string name="Illumination">光照</string>
    <string name="Relief">浮雕</string>
    <string name="Nostalgia">怀旧</string>
    <string name="circular">圆形</string>
    <string name="fillet">圆角</string>
    <string name="Frame_3">相框3</string>
    <string name="Frame_2">相框2</string>
    <string name="Frame_1">相框1</string>
    <string name="saturated">饱和</string>
    <string name="Hue">色相</string>
    <string name="brightness">亮度</string>
    <string name="Select_salary">选择薪资：</string>
    <string name="Select_city">选择城市：</string>
    <string name="Select_job">选择职位：</string>
    <string name="rotate">旋转</string>
    <string name="watermark">水印</string>
    <string name="Mapping">绘图</string>
    <string name="zoom">缩放</string>
    <string name="Flip">翻转</string>
    <string name="Job_desc">职位详情</string>
    <string name="Immediate_delivery">立即投递</string>
    <string name="push_message">推送消息</string>


    <string-array name="education_array">
        <item>不限</item>
        <item>专科</item>
        <item>本科</item>
        <item>硕士</item>
        <item>博士</item>
    </string-array>

</resources>
