<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_boss_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.buiderdream.apehire.view.activitys.BossEditActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/imgContentDescription"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/BossInfo"
            android:textSize="@dimen/title_font" />
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/exit"
            android:layout_marginEnd="20dp"
            android:textSize="@dimen/title_font"
            android:background="@drawable/bg_exit_btn"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/darkgray" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/rl_companyHeadImg"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    style="@style/PersonalInfoTextStyle"
                    android:text="@string/HeadImg" />

                <ImageView
                    android:id="@+id/img_companyHeadImg"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/img_RA1"
                    android:contentDescription="@string/imgContentDescription"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_head_200px" />

                <ImageView
                    android:id="@+id/img_RA1"
                    style="@style/PersonalInfoRightArrowStyle"
                    android:contentDescription="@string/imgContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/lightgray" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_companyName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                >

                <TextView
                    style="@style/PersonalInfoTextStyle"
                    android:text="@string/CompanyName"
                    />

                <TextView
                    android:id="@+id/tv_companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/order_size"
                    android:layout_toStartOf="@+id/img_RA2"
                    android:text="libinglong"/>

                <ImageView
                    android:id="@+id/img_RA2"
                    style="@style/PersonalInfoRightArrowStyle"
                    android:contentDescription="@string/imgContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/lightgray" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                >

                <TextView
                    style="@style/PersonalInfoTextStyle"
                    android:text="@string/PhoneNumber"
                    />

                <TextView
                    android:id="@+id/tv_phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/order_size" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/lightgray" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_address"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    style="@style/PersonalInfoTextStyle"
                    android:text="@string/Address" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/img_RA4"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/order_size" />

                <ImageView
                    android:id="@+id/img_RA4"
                    style="@style/PersonalInfoRightArrowStyle"
                    android:contentDescription="@string/imgContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/lightgray" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_scale"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    style="@style/PersonalInfoTextStyle"
                    android:text="@string/Scale" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/lightgray" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_scale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_CompanyShow"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    style="@style/PersonalInfoTextStyle"
                    android:text="@string/CompanyShow" />

                <ImageView
                    style="@style/PersonalInfoRightArrowStyle"
                    android:contentDescription="@string/imgContentDescription" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_describe"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    style="@style/PersonalInfoTextStyle"
                    android:text="@string/Describe" />

                <ImageView
                    style="@style/PersonalInfoRightArrowStyle"
                    android:contentDescription="@string/imgContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/tv_describe"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:id="@+id/tv_describe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/order_size"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bg_button"
                android:text="@string/upload"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
